# taskbuilder

./: .dockerignore  .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: CI.yml
app/: main.py  settings.py
app/api/: base.py
app/api/v1/: build.py  task.py
app/schemas/: build.py
app/services/: builds.py  tasks.py
app/utils/: parser.py  reader.py  tree.py
tests/: conftest.py  test_ping.py
tests/api/: test_base.py  test_ping.py  test_tasks.py
tests/api/v1/: test_builds.py  test_tasks.py
tests/fixtures/: expected.json  test_builds.yml  test_tasks.yml
tests/utils/: test_parser.py  test_reader.py
