[tool.poetry]
name = "taskbuilder"
version = "0.1.0"
description = "Build system to automate and speed up routine processes"
authors = ["emp7yhead <artyomkropp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
pydantic = {extras = ["email", "dotenv"], version = "^1.10.9"}
PyYAML = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.3.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-isort = "^6.0.0"
Flake8-pyproject = "^1.2.3"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
norecursedirs = "__pycache__"
addopts = "--strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.flake8]
accept-encodings = "utf-8"
max-complexity = 6
statistics = false
max-line-length = 80
doctests = true
enable-extensions = "G"
isort-show-traceback = true
exclude = ['/tests']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
sections = ["FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
follow_imports = "skip"
